class pushed for syllabus section

--- a/index.html
+++ b/index.html
@@ -1412,7 +1412,7 @@ function generateSyllabusHTML() {
 
             modulesHTML += `
                 <div class="sbox">
-                    <h4 class="h6 fw-normal"><strong>${module.title}</strong></h4>
+                    <h4 class="h6 fw-normal font-poppins"><strong>${module.title}</strong></h4>
                     <hr class="border-3 my-2" style="background: #ffcd05;opacity: 1;padding: 2px;">
                     ${module.description ? `<p class="pl-3">${module.description}</p>` : ''}
                     <ul>
