--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                             <p>Download our demo file to check the required
                                                 structure. Create your Blog file following the same format, then
                                                 upload for easy Blog content code generation.</p>
-                                            <button class="btn btn-outline-primary btn-sm" onclick="downloadDemoFile()">
+                                            <button class="btn btn-outline-primary btn-sm" onclick="downloadDemoFile2()">
                                                 <i class="fas fa-download me-2"></i>Download Demo Blog File
                                             </button>
                                         </div>
