feat: Introduce first-time user landing animation and UI state management with new CSS animations, replacing the previous skeleton loader.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mammoth/1.4.2/mammoth.browser.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/skeleton.css">
+
+    <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css">
 </head>
 
@@ -56,23 +57,6 @@
         </div>
     </div>
 
-    <!-- Theme Transition Overlay (Skeleton) -->
-    <div id="themeTransitionOverlay" class="theme-transition-overlay">
-        <div class="app-shell" style="height: 100vh; overflow: hidden;">
-            <div class="theme-skeleton-sidebar">
-                <div class="skeleton-logo"></div>
-                <div class="skeleton-nav-item"></div>
-                <div class="skeleton-nav-item"></div>
-                <div class="skeleton-nav-item"></div>
-                <div class="skeleton-nav-item"></div>
-            </div>
-            <div class="theme-skeleton-main">
-                <div class="skeleton-hero"></div>
-                <div class="skeleton-card"></div>
-                <div class="skeleton-card"></div>
-            </div>
-        </div>
-    </div>
 
     <!-- Main Content Wrapper -->
     <div id="mainContent" class="main-content-wrapper" style="display: none;">
